# UmaTextExtractor

./: CMakeLists.txt  License  Readme.md  conanfile.txt
src/: Main.cpp
